Please see NEWS for a summary of changes since the last release suitable
for announcements.

* Thu Nov 22 2011 Thunor <thunorsif@hotmail.com>
- Added an example application PlayMusic.

* Thu Oct 6 2011 Thunor <thunorsif@hotmail.com>
- Added the option to dump the examples as suggested by Dougal.

* Sun Oct 2 2011 Thunor <thunorsif@hotmail.com>
- Fixed a bug that was causing slowness at start-up when loading the
  XML-like GUI description from an environment variable; loading from
  a file or stdin though are fine.

* Mon Sep 26 2011 Thunor <thunorsif@hotmail.com>
- Version 0.8.0 released (r306)
- Updated the documentation.

* Sun Sep 25 2011 Thunor <thunorsif@hotmail.com>
- Exported the wiki to doc/reference (script included).

* Fri Sep 23 2011 Thunor <thunorsif@hotmail.com>
- Added examples/miscellaneous/expand_and_fill.
- Increased MAXWIDGETS from the tiny 256 (21MB virt) to 529 (25MB virt).
  1024 would've been nice but virtual memory jumps to 34MB. The array
  really should be dynamically allocated but it's a job for another day.

* Thu Sep 22 2011 Thunor <thunorsif@hotmail.com>
- Added command line option --space-expand to set the widget packing
  expand state at the project level.
- Added command line option --space-fill to set the widget packing
  fill state at the project level.
- Added the "space-expand" custom tag attribute for the h/vbox widgets
  to set the widget packing expand state at the container level.
- Added the "space-fill" custom tag attribute for the h/vbox widgets
  to set the widget packing fill state at the container level.
- Added the "space-expand" custom tag attribute for all other widgets
  to set the widget packing expand state at the widget level.
- Added the "space-fill" custom tag attribute for all other widgets
  to set the widget packing fill state at the widget level.
- By default the original quirky widget packing method is used.
  Project level --space-expand/fill override the original method.